[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assests/tree1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/obstacles.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.3004
height = 4.21573

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.91485, 10.5189 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23.9159, 41.0642 )

[node name="Obstacle" type="KinematicBody2D"]
scale = Vector2( 0.626181, 0.626181 )
script = ExtResource( 2 )

[node name="tree1" type="Sprite" parent="."]
position = Vector2( 1.41679, -1.73838 )
scale = Vector2( 0.20126, 0.20126 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ScoreDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreDetection"]
position = Vector2( 49.6864, -265.515 )
scale = Vector2( 2.23025, 22.945 )
shape = SubResource( 2 )

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 5.08158, 2.2585 )
scale = Vector2( 2.29863, 3.03263 )

[connection signal="body_entered" from="ScoreDetection" to="." method="_on_ScoreDetection_body_entered"]
[connection signal="body_entered" from="Death" to="." method="_on_Death_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
